--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=presensi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=mamifulp_absensi
+DB_USERNAME=mamifulp_absensi
+DB_PASSWORD=9ma?fxM5}q;B
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
