--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=Presensi
+APP_ENV=production
+APP_KEY=base64:+mYDSAXjH1t4GQfBmZEg64AYY1TbiqqlUf99EApMhSU=
+APP_DEBUG=false
+APP_URL=https://absensi.mamifulpandanwangi.sch.id
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
