--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "nwidart/laravel-modules": "^10.0",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
